# windows-path-bashrc

./: 0 Managing Windows PATH Variables with Python and MSYS2.md  0 convert windows paths to msys2 paths.md  README.md  main.py  pyproject.toml
windows_path_bashrc/: __init__.py
